2003-12-21  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlDocument.cs, XmlElement.cs, XmlNode.cs :
	  GetElementsByTagName() - Fixed bugzilla #52419, refactored, 
	  and moved private implementation methods to XmlNode class.

2003-12-20  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlTextWriter.cs :
	  Element's namespace should be escaped as usual attribute.

2003-12-18  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlTextWriter.cs : Indentation between xmldecl and doctype.
	* DTDValidatingReader.cs : AttList null reference fix.

2003-12-16  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* DTDValidatingReader.cs : Validity check and entity expansion were
	  incorrectly mixed.
	* DTDObjectModel.cs, DTDReader.cs, XmlInputStream.cs :
	  Going to remove XmlInputStream. XmlStreamReader might be replacable.

2003-12-15  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XPathDocument2ChangedEventHandler.cs : fixed incorrect argument.
	* Moved UpdateEventHandler.cs and XmlUpdateEventArgs.cs to sqlxml.

2003-12-15  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlTextReader.cs : BaseURI was broken. This fixes bug #52098.

2003-12-15  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlUrlResolver.cs : GetEntity() does not return direct network stream
	  that may hold up connection. Now it reads up all the content stream.

2003-12-12  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlAttributeCollection.cs,
	  XmlElement.cs : Fixed bug #51415.
	  When adding attribute to an element using Attributes, it failed.

2003-12-11  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlDocument.cs : Fixed ReadNode() to call AppendChild() to document
	  after setting all attribute nodes. Modified ReadNode() to handle
	  Depth comparison and error handling (!= to <). It allows MS's
	  SgmlReader bug that returns incorrect Depth.

2003-12-11  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlDocumentNavigator.cs : Fixed MoveToNextAttribute (and 